- Technology Chooser
	Added color-coded shadow denoting each technology's era

Improvements:

- Foreign Advisor
	Can select how to display attitudes: numbers, smilies, or both
- Main Interface
	Unit Plot drawing improvements (pre-work only at the moment)
- City Screen
	Can select which tiles to count in Raw Yields when Civ starts

Bug Fixes:

- City Screen
	Happiness and unhappiness are shown for foreign cities
	Whip/Draft Anger is shown for team member cities
- Victory Screen
	Changed random "polling error" on MEMBERS tab to use asynchronous RNG to fix OOS error
- Unit Naming
	Changed random name generator to use asynchronous RNG to fix OOS error

MODDING

New Features:

Improvements:

Bug Fixes:


____________________________________________________________________________________________________
BUG 4.2 released November 15th, 2009

CHANGES

New Features:

- SevoPedia
	Technology page shows Civilizations that start with it

Improvements:

- Great Person Progress Bar
	Added hover text displaying full details
- Info Screen [F9]
	Made colors optional on WONDERS list
	Added hover help text to WONDERS tab buttons
- Option Shortcut Reminder
	Message turns itself off the first time you open the Options screen
	If you turn it back on in the System tab, it will remain on as before

Bug Fixes:

- City Screen
	Fixed display of food bar text when city is already over threshold
- Customizable Domestic Advisor
	Fixed options on Advisors tab
	Fixed Zoom to City Button Details option title
- AutoLog
	Pillaging entries work and show correct gold amount
	Peace offer entries work
- AutoSave
	Fixed invalid save file names when starting from a scenario
- Civ4lerts
	Growth, happiness, and health alerts correctly detect when a city will grow next turn
- General
	Added missing 3.19 change with liberating cities during war-time
- Mac
	Fixed reverse list sorting in GPUtil
	Fixed random crash when using Strategy Layer


MODDING

New Features:

- Events